--- a/app/views/admin/tasks.html.haml
+++ b/app/views/admin/tasks.html.haml
@@ -6,12 +6,13 @@
     %thead
       %tr
         %th{ style: "width: 4%" } id
-        %th{ style: "width: 10%" } Path
+        %th{ style: "width: 8%" } Path
         %th{ style: "width: 10%" } User
         %th{ style: "width: 50%" } Question
         %th{ style: "width: 10%" } Type
-        %th{ style: "width: 8%" } Approve
-        %th{ style: "width: 8%" } Deny
+        %th{ style: "width: 6%" } Approve
+        %th{ style: "width: 6%" } Deny
+        %th{ style: "width: 6%" } Destroy
     %tbody
       - @tasks.to_a.each do |t|
         %tr
@@ -31,8 +32,9 @@
           %td= link_to "approve", admin_update_task_path(t), class: "mark_reviewed", remote: true, method: "put"
           %td
             .dropdown
-              %a{ data: { toggle: "dropdown" } } Deny
+              %a{ data: { toggle: "dropdown" } } deny
               %ul.dropdown-menu{ role: "menu", "aria-labelledby" => "dLabel" }
                 - TaskIssue::ISSUE_TYPES_SHORT.each do |id, name|
                   %li= link_to name, admin_update_task_path(t, deny: id), class: "mark_reviewed", remote: true, method: "put"
+          %td= link_to "destroy", task_url(t), class: "mark_reviewed", remote: true, method: "delete", confirm: "Are you sure?"
   = link_to "Refresh", admin_tasks_path, class: "button button-standard"
