--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -422,12 +422,12 @@ body{background-image: url('https://s3.amazonaws.com/moonlite-nsdub/static/easte
 .notifications_bubble{opacity:1; background-color: #F56C7E;height: 16px;width: 16px;background: #F56C7E url(https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/notification_bubble_background.png) no-repeat center center scroll;position: absolute;right: 0px;top: 7px;color: white;text-shadow: 1px 1px 0 rgba(0, 0, 0, .2);text-align: center;font-size: 9px;line-height: 17px;box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .17), 0 1px 1px rgba(0, 0, 0, .2);-moz-box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .17), 0 1px 1px rgba(0, 0, 0, .2);-webkit-box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .17), 0 1px 1px rgba(0, 0, 0, .2);border-radius: 13px;cursor: pointer;display: inline;}
 .notifications_header{ border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
 .notification_space { padding: 12px 12px 0px 12px; }
-.notification_space .notification a { padding: 0; }
+.navbar .nav .notification_space .notification a { padding: 0; }
 .notification { display: inline-block;  border-radius: 3px;  box-shadow: 0 2px 4px rgba(0, 0, 0, .05);  background-color:white;  border: 1px solid #ccc;  margin:0 auto 0 auto;  position:relative; font-size:13px; width: 270px; padding: 8px;}
 .notification img:hover { box-shadow: 0px 3px 5px 1px #BBB; }
 .notification-unread { background-color: #EEE; }
 .notification:hover { background-color: #EEE; }
-.notification_body { margin: 0; text-decoration: none; color: #404040; font-size: 12px; width: 230px; float: right; text-shadow:none; line-height:17px;}
+.notification_body { margin: 0; text-decoration: none; color: #404040; font-size: 12px; width: 225px; float: right; text-shadow:none; line-height:17px;}
 .notification_time { margin: 7px 2px 0 0; font-size: 11px; float: right; text-shadow:none; cursor:default; color: #BBB; line-height: 5px;}
 .nub { background-image: url(https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/notification_arrow_gray.png); background-repeat: no-repeat; background-size: auto; position:absolute; height:11px; width:20px; top:-11px; left: 185px;}
 .sidenub { background-image: url(https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/notification_arrow_all_gray.png); background-repeat: no-repeat; background-size: auto; position:absolute; height:20px; width:11px; top:11px; left: -11px;}
