--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -360,6 +360,7 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
 .label.notice { font-size:13px; float:right; margin:2px 6px 0 0; background-color:#3A87AD}
 #CRprogressbar { width:632px; height: 40px; margin: 0 auto;}
 .CRquestionspace { display:inline-block; padding-top:9px; text-align: center; width: 100%; }
+.snippet { margin: 10px 0 0 0; border: none; border-radius: none; background-color: rgb(249, 249, 249); font-family: 'Menlo', 'Courier New', 'Terminal', monospace; }
 .cr_question_header { font:bold 15px 'MuliRegular', 'Helvetica', 'Arial', sans-serif;}
 .CRquestion { font-size:15px; padding: 0; margin: 15px 5px 0 10px; word-break: normal; background-color: white; border: none; font: normal 18px 'MuliRegular', 'Helvetica', 'Arial', sans-serif;} 
 .CRresponsespace { width: 97%; width: calc(100% - 10px); margin-top: 20px; display:inline-block; background-color:#F9F9F9;border-radius: 6px; vertical-align: top; padding:5px; border:1px solid rgba(0, 0, 0, .1);font:bold 18px 'MuliRegular', 'Helvetica', 'Arial', sans-serif;}
