--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -109,7 +109,7 @@
               %div.dropdown.pull-right.notification-icon{ style: "padding-top:9px;" }
                 %a.dropdown-toggle{ "data-toggle" => "dropdown", style: "padding:10px;" }
                   %img{ src: ICON_GEAR, style: "height:20px; width:20px;", title:"Settings", alt: "Settings"}
-                %ul.dropdown-menu{ role: "button", style: "margin:0px;padding: 0 0 0px 0; top:43px; right:-52px; min-width: 25px; min-height: 50px;" }
+                %ul.dropdown-menu{ role: "button", style: "margin:0px;padding: 0 0 0px 0; top:43px; right:-40px; min-width: 25px; min-height: 50px;" }
                   %li
                     %div
                       %div.nub{ style: "left: 62px;"}
@@ -118,7 +118,7 @@
                         - if @enable_administration
                           %li= link_to "Admin", admin_overview_path, style: "border-bottom: 1px solid #DDD; color: inherit; text-shadow: none;"
                         - if @group
-                          %li.explore_link= link_to "Explore Challenges", "#", style: "border-bottom: 1px solid #DDD; color: inherit; text-shadow: none;"
+                          %li.explore_link= link_to "Explore", "#", style: "border-bottom: 1px solid #DDD; color: inherit; text-shadow: none;"
                         - if @group
                           %li= link_to "View Profile", user_path(current_user.username), style: "border-bottom: 1px solid #DDD; color: inherit; text-shadow: none;"
                         %li= link_to "Edit Profile", edit_user_path(current_user.username), style: "border-bottom: 1px solid #DDD; color: inherit; text-shadow: none;"
