--- a/app/views/sections/finish.html.haml
+++ b/app/views/sections/finish.html.haml
@@ -19,7 +19,7 @@
             #{@correct_topics}
       %hr
       %div{ style: "text-align: center;"}
-        - if @sample
+        - if @enrollment.metascore.to_i == 0
           %div{ style: "background-color: whitesmoke; display: inline-block; width: 293px; margin: -5px 10px 0 0; padding: 5px 0; border: 1px solid rgba(0,0,0,.1);"}
             %h4 
             .metric
