--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -1367,9 +1367,6 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
       hr { margin:10px 0; }
       
       .actions {
-        margin-top: 90px;
-        float: right;
-        
         a {
           &:hover { text-decoration: none; }
           
@@ -1398,7 +1395,20 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
 
 #grade {
   .header{
+    padding: 15px 15px 0 15px;
+    margin: 0 0 30px 0;
+    
     .actions {
+      margin-top: 35px;
+      float: right;
+      
+      .submitted_at {
+        font-size: 13px; 
+        margin-right: 10px; 
+        position: relative; 
+        top: 4px; 
+      }
+      
       a {
         div {
           display: inline-block;
