--- a/app/views/pages/portal.html.haml
+++ b/app/views/pages/portal.html.haml
@@ -64,7 +64,7 @@
             %div
               = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/icon_group.png"
               %h3 Account
-        = link_to paths_url(@group) do
+        = link_to group_paths_url(@group) do
           .option
             %div
               = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/icon_challenges.png"
